--- a/src/styles.css
+++ b/src/styles.css
@@ -3,15 +3,44 @@ body, div, section {
   padding: 0;
 }
 
-#map {
+body {
   width: 100vw;
+  height: 100vh;
+  background-color: #232333;
+}
+
+section {
+  width: 100vw;
+}
+
+#map {
   aspect-ratio: 10/8;
-  background-color: green;
  
   display: grid;
   grid-template-columns: repeat(10, 1fr [col-start]);
   grid-template-rows: repeat(8, 1fr [row-start]);
   gap: 2px;
+}
+
+#actions {
+  aspect-ratio: 10/1;
+  
+  display: grid;
+  grid-template-columns: repeat(10, 1fr [col-start]);
+  gap: 2px;
+}
+
+.action {
+  background-color: #ababbb;
+  border-radius: 2px;
+}
+
+.action .selected {
+  background-color: #9abb9a;
+}
+
+.action[data-action='move']::after {
+  content: 'open_with';
 }
 
 .tile {
