--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-body, div, section {
+body, div, section, span {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -34,15 +34,15 @@ section {
 }
 
 #health .fill {
-  background-color: red;
+  background-color: #FF4000;
 }
 
 #mana .fill {
-  background-color: blue;
+  background-color: #3185FC;
 }
 
 #stamina .fill {
-  background-color: green;
+  background-color: #0CCA4A;
 }
 
 #actions {
@@ -55,11 +55,17 @@ section {
 
 .action {
   background-color: #ababbb;
-  border-radius: 4px;
+  border-radius: 8px;
   
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
+}
+
+.action::after {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 
 .action.selected {
@@ -79,6 +85,8 @@ section {
 }
 
 .bar {
+  flex: 1;
+ 
   position: relative;
   background-color: #454555;
   
@@ -93,6 +101,10 @@ section {
   top: 0;
   bottom: 0;
   width: 75%;
+}
+
+.bar .bar-text {
+  color: white;
 }
 
 .tile {
