--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,8 @@ section {
 }
 
 #map {
+  flex: none;
+ 
   aspect-ratio: 11/9;
  
   display: grid;
@@ -31,6 +33,8 @@ section {
 }
 
 #vitals {
+  flex: none;
+ 
   height: 10px;
  
   display: flex;
@@ -48,10 +52,12 @@ section {
 }
 
 #stamina .fill {
-  background-color: #0CCA4A;
+  background-color: #0AC848;
 }
 
 #actions {
+  flex: none;
+ 
   aspect-ratio: 11/1;
   
   display: grid;
