--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body, div, section, span {
 
 body {
   width: 100vw;
-  height: 100vh;
+  max-height: 100vh;
   background-color: #232333;
   padding: 2px;
   
@@ -19,14 +19,14 @@ section {
   margin-bottom: 16px !important;
 }
 
-#map {
+#viewport {
   flex: none;
  
-  aspect-ratio: 11/9;
+  aspect-ratio: 11/11;
  
   display: grid;
   grid-template-columns: repeat(11, 1fr [col-start]);
-  grid-template-rows: repeat(9, 1fr [row-start]);
+  grid-template-rows: repeat(11, 1fr [row-start]);
   gap: 2px;
   
   overflow: hidden;
