--- a/src/styles.css
+++ b/src/styles.css
@@ -141,5 +141,7 @@ section {
 .tile {
   aspect-ratio: 1 / 1;
   background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat;
+  image-rendering: pixelated;
 }
-
