feat: cycle through stacked entities

--- a/src/styles.css
+++ b/src/styles.css
@@ -170,6 +170,7 @@ section {
 }
 
 .entity {
+  display: none;
   background-size: cover;
   background-repeat: no-repeat;
   image-rendering: pixelated;
