--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,26 @@ section {
   margin-bottom: 16px !important;
 }
 
+span.ne {
+  top: -0.7em;
+  right: 0;
+}
+
+span.nw {
+  top: -0.7em;
+  left: 0;
+}
+
+span.se {
+  bottom: -0.7em;
+  right: 0;
+}
+
+span.sw {
+  bottom: -0.7em;
+  left: 0;
+}
+
 #main {
   margin: auto;
   height: 100vh;
@@ -162,6 +182,18 @@ section {
   content: "settings";
 }
 
+.action span {
+  position: absolute;
+  background-color: #454555;
+  background-size: cover;
+  background-repeat: no-repeat;
+  image-rendering: pixelated;
+  border-radius: 2px;
+  cursor: pointer;
+  aspect-ratio: 1/1;
+  width: 16px;
+}
+
 .bar {
   flex: 1;
 
@@ -193,6 +225,7 @@ section {
 .close-button {
   background-color: #ff5555;
   border-radius: 4px;
+  color: black;
   cursor: pointer;
 }
 
@@ -223,26 +256,6 @@ section {
   font-family: sans-serif;
   font-size: 10px;
   position: absolute;
-}
-
-.entity .ne {
-  top: -0.7em;
-  right: 0;
-}
-
-.entity .nw {
-  top: -0.7em;
-  left: 0;
-}
-
-.entity .se {
-  bottom: -0.7em;
-  right: 0;
-}
-
-.entity .sw {
-  bottom: -0.7em;
-  left: 0;
 }
 
 .hidden {
