feat: use stat window for player level ups

--- a/src/styles.css
+++ b/src/styles.css
@@ -448,9 +448,13 @@ section {
 }
 
 .submit {
+  border: none;
+  color: white;
   border-radius: 8px;
   font-size: 1.2rem;
   background-color: #a82a00;
+  padding: 4px 0; 
+  width: 100%;
 }
 
 .submit:disabled {
