fix: use green for submit button

--- a/src/styles.css
+++ b/src/styles.css
@@ -452,7 +452,7 @@ section {
   color: white;
   border-radius: 8px;
   font-size: 1.2rem;
-  background-color: #a82a00;
+  background-color: #05752a;
   padding: 4px 0; 
   width: 100%;
 }
