--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 body,
 button,
 div,
+h1,
 h3,
 main,
 p,
@@ -34,6 +35,10 @@ h2,
 h3 {
   color: white;
   font-family: "Jacquard 12", system-ui;
+}
+
+h1 {
+  font-size: 2.25rem;
 }
 
 h3 {
@@ -84,6 +89,15 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  position: relative;
+}
+
+#title {
+  position: absolute;
+  left: 50%;
+  top: 10vh;
+  z-index: 15;
+  transform: translateX(-50%);
 }
 
 #viewport {
@@ -302,6 +316,23 @@ section {
   left: 0;
 }
 
+.fade {
+  opacity: 0;
+  animation: fade-anim 5s ease forwards;
+}
+
+@keyframes fade-anim {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .hidden {
   display: none !important;
 }
@@ -312,10 +343,10 @@ section {
   inset: 0;
   opacity: 0.5;
   background-color: red;
-  animation: fade 1s linear backwards;
+  animation: highlight-anim 1s linear backwards;
 }
 
-@keyframes fade {
+@keyframes highlight-anim {
   from {
     opacity: 0.5;
   }
