chore: add highlight class to entity

--- a/src/styles.css
+++ b/src/styles.css
@@ -510,7 +510,7 @@ section {
   transition: opacity 0.2s ease;
 }
 
-.tile.highlight::before {
+.tile:has(.entity.highlight)::before {
   opacity: 0.5;
 }
 
