--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ a,
 a:visited {
   color: #f2caa3;
   text-decoration: underline;
+  cursor: pointer;
 }
 
 body {
@@ -32,6 +33,7 @@ body {
 
 button {
   font-family: "Tiny5", sans-serif;
+  cursor: pointer;
 }
 
 h1,
@@ -174,6 +176,7 @@ section {
   border-radius: 8px;
 
   position: relative;
+  cursor: pointer;
 }
 
 .action::after {
