--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,15 @@
 body,
 button,
 div,
+fieldset,
 h1,
 h3,
+img,
 main,
+option,
 p,
 section,
+select,
 span {
   margin: 0;
   padding: 0;
@@ -45,6 +49,28 @@ button:not(:disabled):hover {
   filter: brightness(0.8);
 }
 
+fieldset {
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+
+  display: flex;
+  align-items: start;
+  padding-top: 4px;
+}
+
+fieldset > div {
+  margin-right: 32px;
+}
+
+fieldset > input {
+  width: 100%;
+}
+
+fieldset > select {
+  width: 100%;
+}
+
 h1,
 h2,
 h3 {
@@ -62,6 +88,12 @@ h3 {
 
 section {
   width: 100%;
+}
+
+select {
+  font-family: "Tiny5", sans-serif;
+  cursor: pointer;
+  padding: 1px 2px;
 }
 
 #game {
@@ -91,6 +123,43 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+#new-game {
+  position: absolute;
+  inset: 0;
+  background-color: #232333;
+  color: white;
+  z-index: 99;
+  padding-top: 48px;
+}
+
+#new-game form {
+  position: relative;
+  height: 300px;
+}
+
+#new-game form > * {
+  width: 50%;
+}
+
+#new-game form > button {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+#new-game img {
+  width: 48%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
+  border: 4px solid black;
+  border-radius: 16px;
+  padding: 4px 4px 16px 4px;
 }
 
 #level-up {
@@ -403,6 +472,11 @@ section {
   left: 0;
   right: 0;
   margin-bottom: 16px;
+}
+
+.form-inputs > * {
+  margin: 32px 0;
+  width: 100%;
 }
 
 .game-title {
